--- a/index.html
+++ b/index.html
@@ -20,12 +20,28 @@
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
 </head>
-
 <body>
+<header>
+  <nav>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/app.js"></script>
+  </nav>
+</header>
+<main>
+  <section>
+
+  </section>
+  <article>
+    <p>Hello world! This is HTML5 Boilerplate.</p>
+
+  </article>
+</main>
+<footer>
+  <div>
+    
+  </div>
+</footer>
+<!-- Add your site or application content here -->
+<script src="js/app.js"></script>
 
 </body>
 
